Intended v0.1.31

v0.1.30
+ Improved throttle

v0.1.29
+ import base64
+ Many other changes...

v0.1.28
+ implement repeat
+ implement deepEqual
+ implement proto
+ improved client detection in client.js

v0.1.27
+ make client a proper class, and add the beginnins to OS user-agent parsing
+ improve url.js - enable getting and setting the hash/query params
+ implement merge
+ Add client.isMobile

v0.1.26
+ add client.name and client.is[IPhone, IPad, IPod]

v0.1.25
+ fix cookie.remove
+ implement create
+ implement arrayToObject
+ implement defineGetter

v0.1.24
+ implement cookie
+ move dom/* into ui library ui.js
+ implement Animation
+ add json, from JSON2 https://github.com/douglascrockford/JSON-js
+ xhr improvements
+ implement url
+ implement trim
+ implement isArguments
+ use native isArray if available
+ add @kaleb to contributors

v0.1.23
+ rename class _init to init
+ add support for mixins
+ implement Promise
+ implement invokeWith
+ implement recall
+ implement Publisher mixin
+ implement dom
+ implement client
+ implement popup

v0.1.22
+ implement ui/Component#_off
+ implement ui/Component#_makeDraggable - publishes 'drag' and 'drop' events, both with a data object describing the drag
+ implement throttle
+ change implementation of delay to actually delay, rather than throttle
+ Improved ui/Component event normalization (notably mousewheel)
+ Implement browser
+ Implement math.round

v0.1.21
+ start implementing std/time
+ implement copy - shallow object/array copying, with a flag for deep copying
+ implement keys
+ implement flatten
+ clean up xhr code
+ fix xhr bug where callback would not get called for empty responses


v0.1.20
+ ui/Component API cleanup
+ implement ui/Component display, hide and show
+ fix ui/Component addClass/hasClass/removeClass/toggleClass
+ better xhr error checking and xhr object cleanup
+ implement invoke
+ rename pick to filter. deprecate pick, but keep it around for now
+ give Logger alert email functionality
+ Fix delay