@@ -1,4 +1,5 @@
 Intended v0.1.31
++ Beefed up proto.js
 
 v0.1.30
 + Improved throttle
